// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Upload > Upload baseVue demo works fine 1`] = `
<div
  class="upload-demo"
  data-v-43787b67=""
>
  <div
    class="upload-title"
    data-v-43787b67=""
  >
    单选上传
  </div>
  <div
    class="t-upload"
    data-v-43787b67=""
  >
    
    
    <div
      class="t-upload__item t-upload__item--add"
    >
      <div
        class="t-upload__add-icon"
      >
        <svg
          class="t-icon t-icon-add"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="add"
          >
            <path
              d="M12 5L12 19M19 12L5 12"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
    <input
      accept="image/png"
      hidden=""
      type="file"
    />
    <!---->
  </div>
</div>
`;

exports[`Upload > Upload customVue demo works fine 1`] = `
<div
  class="upload-demo"
  data-v-89f78ba6=""
>
  <div
    class="upload-title"
    data-v-89f78ba6=""
  >
    请上传身份证人像面
  </div>
  <div
    class="upload-content"
    data-v-89f78ba6=""
  >
    <div
      class="t-upload front"
      data-v-89f78ba6=""
    >
      
      
      <div
        class="t-upload__item t-upload__item--add"
      >
        <div
          class="t-upload__add-icon"
        >
          
          <div
            class="add-content"
            data-v-89f78ba6=""
          >
            <div
              class="t-image t-image--square"
              data-v-89f78ba6=""
              style="width: 32px; height: 32px;"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload3.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
          </div>
          
        </div>
      </div>
      <input
        accept="image/png"
        hidden=""
        type="file"
      />
      <!---->
    </div>
  </div>
  <div
    class="upload-title"
    data-v-89f78ba6=""
  >
    请上传身份证国徽面
  </div>
  <div
    class="upload-content"
    data-v-89f78ba6=""
  >
    <div
      class="t-upload reverse"
      data-v-89f78ba6=""
    >
      
      
      <div
        class="t-upload__item t-upload__item--add"
      >
        <div
          class="t-upload__add-icon"
        >
          
          <div
            class="add-content"
            data-v-89f78ba6=""
          >
            <div
              class="t-image t-image--square"
              data-v-89f78ba6=""
              style="width: 32px; height: 32px;"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload3.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
          </div>
          
        </div>
      </div>
      <input
        accept="image/png"
        hidden=""
        type="file"
      />
      <!---->
    </div>
  </div>
</div>
`;

exports[`Upload > Upload mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Upload上传
  </h1>
  <p
    class="summary"
  >
    用于相册读取或拉起拍照的图片上传功能。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选上传
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="upload-demo"
        data-v-43787b67=""
      >
        <div
          class="upload-title"
          data-v-43787b67=""
        >
          单选上传
        </div>
        <div
          class="t-upload"
          data-v-43787b67=""
        >
          
          
          <div
            class="t-upload__item t-upload__item--add"
          >
            <div
              class="t-upload__add-icon"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="add"
                >
                  <path
                    d="M12 5L12 19M19 12L5 12"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </div>
          </div>
          <input
            accept="image/png"
            hidden=""
            type="file"
          />
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        多选上传
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="upload-demo"
        data-v-79f9c52d=""
      >
        <div
          class="upload-title"
          data-v-79f9c52d=""
        >
          多选上传
        </div>
        <div
          class="t-upload"
          data-v-79f9c52d=""
          grid-config="[object Object]"
        >
          
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <!---->
            <!---->
          </div>
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload6.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <!---->
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="close"
              >
                <path
                  d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <!---->
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="close"
              >
                <path
                  d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
          <div
            class="t-upload__item t-upload__item--add"
          >
            <div
              class="t-upload__add-icon"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="add"
                >
                  <path
                    d="M12 5L12 19M19 12L5 12"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </div>
          </div>
          <input
            accept=""
            hidden=""
            multiple=""
            type="file"
          />
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        加载状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="upload-demo"
        data-v-6b9ad65a=""
      >
        <div
          class="upload-title"
          data-v-6b9ad65a=""
        >
          上传图片
        </div>
        <div
          class="t-upload"
          data-v-6b9ad65a=""
        >
          
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload6.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <div
              class="t-upload__progress-mask"
            >
              
              <svg
                class="t-icon t-icon-loading t-upload__progress-loading"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 2.25C6.61556 2.25 2.25 6.61556 2.25 12C2.25 17.3844 6.61556 21.75 12 21.75V19.3125C7.96142 19.3125 4.6875 16.0386 4.6875 12C4.6875 7.96142 7.96142 4.6875 12 4.6875C16.0386 4.6875 19.3125 7.96142 19.3125 12H21.75C21.75 6.61556 17.3844 2.25 12 2.25Z"
                  fill="currentColor"
                  id="loading"
                />
              </svg>
              <div
                class="t-upload__progress-text"
              >
                上传中...
              </div>
              
              <!---->
            </div>
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="close"
              >
                <path
                  d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <div
              class="t-upload__progress-mask"
            >
              
              <svg
                class="t-icon t-icon-loading t-upload__progress-loading"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 2.25C6.61556 2.25 2.25 6.61556 2.25 12C2.25 17.3844 6.61556 21.75 12 21.75V19.3125C7.96142 19.3125 4.6875 16.0386 4.6875 12C4.6875 7.96142 7.96142 4.6875 12 4.6875C16.0386 4.6875 19.3125 7.96142 19.3125 12H21.75C21.75 6.61556 17.3844 2.25 12 2.25Z"
                  fill="currentColor"
                  id="loading"
                />
              </svg>
              <div
                class="t-upload__progress-text"
              >
                68%
              </div>
              
              <!---->
            </div>
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="close"
              >
                <path
                  d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
          <div
            class="t-upload__item t-upload__item--add"
          >
            <div
              class="t-upload__add-icon"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="add"
                >
                  <path
                    d="M12 5L12 19M19 12L5 12"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </div>
          </div>
          <input
            accept="image/png"
            hidden=""
            multiple=""
            type="file"
          />
          <!---->
        </div>
      </div>
      <div
        class="upload-demo__title"
        data-v-6b9ad65a=""
      >
        上传失败
      </div>
      <div
        class="upload-demo"
        data-v-6b9ad65a=""
      >
        <div
          class="upload-title"
          data-v-6b9ad65a=""
        >
          上传图片
        </div>
        <div
          class="t-upload"
          data-v-6b9ad65a=""
        >
          
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <div
              class="t-upload__progress-mask"
            >
              <svg
                class="t-icon t-icon-close-circle"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="close-circle"
                >
                  <path
                    d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M15.1813 8.81836L11.9997 12M11.9997 12L8.81738 15.1823M11.9997 12L15.1813 15.1816M11.9997 12L8.81738 8.81768"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
              <div
                class="t-upload__progress-text"
              >
                上传失败
              </div>
            </div>
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="close"
              >
                <path
                  d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
          <div
            class="t-upload__item t-upload__item--add"
          >
            <div
              class="t-upload__add-icon"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="add"
                >
                  <path
                    d="M12 5L12 19M19 12L5 12"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </div>
          </div>
          <input
            accept=""
            hidden=""
            multiple=""
            type="file"
          />
          <!---->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 样式自定义
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选上传
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="upload-demo"
        data-v-89f78ba6=""
      >
        <div
          class="upload-title"
          data-v-89f78ba6=""
        >
          请上传身份证人像面
        </div>
        <div
          class="upload-content"
          data-v-89f78ba6=""
        >
          <div
            class="t-upload front"
            data-v-89f78ba6=""
          >
            
            
            <div
              class="t-upload__item t-upload__item--add"
            >
              <div
                class="t-upload__add-icon"
              >
                
                <div
                  class="add-content"
                  data-v-89f78ba6=""
                >
                  <div
                    class="t-image t-image--square"
                    data-v-89f78ba6=""
                    style="width: 32px; height: 32px;"
                  >
                    <div
                      class="t-image__mask"
                    >
                      <div
                        class="t-loading"
                        style="font-size: 20px;"
                      >
                        <div
                          class="t-loading__dots"
                          style="animation-duration: 800ms; width: 20px; height: 20px;"
                        >
                          
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                          />
                          
                        </div>
                        <!---->
                        <!---->
                      </div>
                    </div>
                    <picture>
                      <!---->
                      <img
                        alt=""
                        class="t-image__img"
                        src="https://tdesign.gtimg.com/mobile/demos/upload3.png"
                        style="object-fit: fill; object-position: center;"
                      />
                    </picture>
                  </div>
                </div>
                
              </div>
            </div>
            <input
              accept="image/png"
              hidden=""
              type="file"
            />
            <!---->
          </div>
        </div>
        <div
          class="upload-title"
          data-v-89f78ba6=""
        >
          请上传身份证国徽面
        </div>
        <div
          class="upload-content"
          data-v-89f78ba6=""
        >
          <div
            class="t-upload reverse"
            data-v-89f78ba6=""
          >
            
            
            <div
              class="t-upload__item t-upload__item--add"
            >
              <div
                class="t-upload__add-icon"
              >
                
                <div
                  class="add-content"
                  data-v-89f78ba6=""
                >
                  <div
                    class="t-image t-image--square"
                    data-v-89f78ba6=""
                    style="width: 32px; height: 32px;"
                  >
                    <div
                      class="t-image__mask"
                    >
                      <div
                        class="t-loading"
                        style="font-size: 20px;"
                      >
                        <div
                          class="t-loading__dots"
                          style="animation-duration: 800ms; width: 20px; height: 20px;"
                        >
                          
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                          />
                          
                        </div>
                        <!---->
                        <!---->
                      </div>
                    </div>
                    <picture>
                      <!---->
                      <img
                        alt=""
                        class="t-image__img"
                        src="https://tdesign.gtimg.com/mobile/demos/upload3.png"
                        style="object-fit: fill; object-position: center;"
                      />
                    </picture>
                  </div>
                </div>
                
              </div>
            </div>
            <input
              accept="image/png"
              hidden=""
              type="file"
            />
            <!---->
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Upload > Upload multipleVue demo works fine 1`] = `
<div
  class="upload-demo"
  data-v-79f9c52d=""
>
  <div
    class="upload-title"
    data-v-79f9c52d=""
  >
    多选上传
  </div>
  <div
    class="t-upload"
    data-v-79f9c52d=""
    grid-config="[object Object]"
  >
    
    <div
      class="t-upload__item"
    >
      <div
        class="t-image t-image--round t-upload__image"
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
              
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <picture>
          <!---->
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
      <!---->
      <!---->
    </div>
    <div
      class="t-upload__item"
    >
      <div
        class="t-image t-image--round t-upload__image"
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
              
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <picture>
          <!---->
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/mobile/demos/upload6.png"
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
      <!---->
      <svg
        class="t-icon t-icon-close t-upload__delete-btn"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="close"
        >
          <path
            d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
    </div>
    <div
      class="t-upload__item"
    >
      <div
        class="t-image t-image--round t-upload__image"
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
              
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <picture>
          <!---->
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
      <!---->
      <svg
        class="t-icon t-icon-close t-upload__delete-btn"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="close"
        >
          <path
            d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
    </div>
    
    <div
      class="t-upload__item t-upload__item--add"
    >
      <div
        class="t-upload__add-icon"
      >
        <svg
          class="t-icon t-icon-add"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="add"
          >
            <path
              d="M12 5L12 19M19 12L5 12"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
    <input
      accept=""
      hidden=""
      multiple=""
      type="file"
    />
    <!---->
  </div>
</div>
`;

exports[`Upload > Upload statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="upload-demo"
    data-v-6b9ad65a=""
  >
    <div
      class="upload-title"
      data-v-6b9ad65a=""
    >
      上传图片
    </div>
    <div
      class="t-upload"
      data-v-6b9ad65a=""
    >
      
      <div
        class="t-upload__item"
      >
        <div
          class="t-image t-image--round t-upload__image"
        >
          <div
            class="t-image__mask"
          >
            <div
              class="t-loading"
              style="font-size: 20px;"
            >
              <div
                class="t-loading__dots"
                style="animation-duration: 800ms; width: 20px; height: 20px;"
              >
                
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                />
                
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <picture>
            <!---->
            <img
              alt=""
              class="t-image__img"
              src="https://tdesign.gtimg.com/mobile/demos/upload6.png"
              style="object-fit: fill; object-position: center;"
            />
          </picture>
        </div>
        <div
          class="t-upload__progress-mask"
        >
          
          <svg
            class="t-icon t-icon-loading t-upload__progress-loading"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2.25C6.61556 2.25 2.25 6.61556 2.25 12C2.25 17.3844 6.61556 21.75 12 21.75V19.3125C7.96142 19.3125 4.6875 16.0386 4.6875 12C4.6875 7.96142 7.96142 4.6875 12 4.6875C16.0386 4.6875 19.3125 7.96142 19.3125 12H21.75C21.75 6.61556 17.3844 2.25 12 2.25Z"
              fill="currentColor"
              id="loading"
            />
          </svg>
          <div
            class="t-upload__progress-text"
          >
            上传中...
          </div>
          
          <!---->
        </div>
        <svg
          class="t-icon t-icon-close t-upload__delete-btn"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <div
        class="t-upload__item"
      >
        <div
          class="t-image t-image--round t-upload__image"
        >
          <div
            class="t-image__mask"
          >
            <div
              class="t-loading"
              style="font-size: 20px;"
            >
              <div
                class="t-loading__dots"
                style="animation-duration: 800ms; width: 20px; height: 20px;"
              >
                
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                />
                
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <picture>
            <!---->
            <img
              alt=""
              class="t-image__img"
              src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
              style="object-fit: fill; object-position: center;"
            />
          </picture>
        </div>
        <div
          class="t-upload__progress-mask"
        >
          
          <svg
            class="t-icon t-icon-loading t-upload__progress-loading"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2.25C6.61556 2.25 2.25 6.61556 2.25 12C2.25 17.3844 6.61556 21.75 12 21.75V19.3125C7.96142 19.3125 4.6875 16.0386 4.6875 12C4.6875 7.96142 7.96142 4.6875 12 4.6875C16.0386 4.6875 19.3125 7.96142 19.3125 12H21.75C21.75 6.61556 17.3844 2.25 12 2.25Z"
              fill="currentColor"
              id="loading"
            />
          </svg>
          <div
            class="t-upload__progress-text"
          >
            68%
          </div>
          
          <!---->
        </div>
        <svg
          class="t-icon t-icon-close t-upload__delete-btn"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      
      <div
        class="t-upload__item t-upload__item--add"
      >
        <div
          class="t-upload__add-icon"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="add"
            >
              <path
                d="M12 5L12 19M19 12L5 12"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
      <input
        accept="image/png"
        hidden=""
        multiple=""
        type="file"
      />
      <!---->
    </div>
  </div>
  <div
    class="upload-demo__title"
    data-v-6b9ad65a=""
  >
    上传失败
  </div>
  <div
    class="upload-demo"
    data-v-6b9ad65a=""
  >
    <div
      class="upload-title"
      data-v-6b9ad65a=""
    >
      上传图片
    </div>
    <div
      class="t-upload"
      data-v-6b9ad65a=""
    >
      
      <div
        class="t-upload__item"
      >
        <div
          class="t-image t-image--round t-upload__image"
        >
          <div
            class="t-image__mask"
          >
            <div
              class="t-loading"
              style="font-size: 20px;"
            >
              <div
                class="t-loading__dots"
                style="animation-duration: 800ms; width: 20px; height: 20px;"
              >
                
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                />
                
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <picture>
            <!---->
            <img
              alt=""
              class="t-image__img"
              src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
              style="object-fit: fill; object-position: center;"
            />
          </picture>
        </div>
        <div
          class="t-upload__progress-mask"
        >
          <svg
            class="t-icon t-icon-close-circle"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="close-circle"
            >
              <path
                d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
                fill="transparent"
                id="fill1"
              />
              <path
                d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M15.1813 8.81836L11.9997 12M11.9997 12L8.81738 15.1823M11.9997 12L15.1813 15.1816M11.9997 12L8.81738 8.81768"
                id="stroke2"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          <div
            class="t-upload__progress-text"
          >
            上传失败
          </div>
        </div>
        <svg
          class="t-icon t-icon-close t-upload__delete-btn"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      
      <div
        class="t-upload__item t-upload__item--add"
      >
        <div
          class="t-upload__add-icon"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="add"
            >
              <path
                d="M12 5L12 19M19 12L5 12"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
      <input
        accept=""
        hidden=""
        multiple=""
        type="file"
      />
      <!---->
    </div>
  </div>
  
</div>
`;
